# file-watch

./: .gitignore  README.md  build.bat  build.sh  config.example.toml  pyproject.toml
.claude/: settings.local.json
src/file_watch/: __main__.py  cli.py  config.py  conflicts.py  logging_setup.py  mover.py  watcher.py
src/file_watch/gui/: __init__.py  app.py  entry_panel.py  presets.py  settings_io.py  watcher_bridge.py  widgets.py
tests/: conftest.py  test_cli.py  test_config.py  test_conflicts.py  test_mover.py
