[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "file-watch"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "watchdog>=4.0",
    "click>=8.0",
    "tomli>=2.0; python_version < '3.11'",
    "ttkbootstrap>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-timeout"]

[project.scripts]
file-watch = "file_watch.cli:main"
file-watch-gui = "file_watch.gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]
